--- a/software.html
+++ b/software.html
@@ -12,7 +12,9 @@
         <h1 class="text-2xl font-bold text-cyan-400 hover:text-cyan-300 transition">Software Projects</h1>
         <ul class="flex gap-6">
             <li><a href="index.html" class="hover:text-cyan-400 transition">Home</a></li>
-            <li><a href="projects.html" class="hover:text-cyan-400 transition">Projects</a></li>
+            <li><a href="about.html" class="hover:text-cyan-400 transition">About</a></li>
+            <li><a href="projects1.html" class="hover:text-cyan-400 transition">Projects</a></li>
+            <li><a href="blogs.html" class="hover:text-cyan-400 transition">Blogs</a></li>
             <li><a href="contact.html" class="hover:text-cyan-400 transition">Contact</a></li>
         </ul>
     </nav>
