--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Sharavanan Mathivanan
         </h2>
         <p class="text-xl md:text-2xl text-gray-300 max-w-2xl animate-fade-in-delay" id="descText">
-            Mechatronics & Artificial Intelligence Systems Engineer — engineering thoughts into reality
+            Mechatronics & Artificial Intelligence Systems Engineer — Engineering thoughts into reality
         </p>
         <div class="mt-8 flex gap-4 animate-fade-in-delay-2" id="heroButtons">
             <a href="projects1.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
@@ -332,11 +332,11 @@
                         <a href="mailto:smathiv2@uwo.ca" class="w-10 h-10 bg-gray-800 hover:bg-cyan-500/20 rounded-lg flex items-center justify-center text-cyan-400 hover:text-cyan-300 transition" title="Email">
                             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
                         </a>
-                    </div>
+                    </div> 
                 </div>
             </div>
             
-            <!-- Divider -->
+            <!-- Footer Divider -->
             <div class="border-t border-gray-700/50 pt-8 mt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center text-gray-500 text-sm">
                     <p>&copy; 2025 Sharavanan Mathivanan. All rights reserved.</p>
