--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 </head>
 <body class="bg-gray-950 text-white font-sans">
 
+    <!-- Custom Loading Screen -->
+    <div id="loadingScreen" class="fixed inset-0 bg-gray-950 z-[9999] flex items-center justify-center">
+        <div class="text-center">
+            <div class="relative w-32 h-32 mx-auto mb-8">
+                <div class="absolute inset-0 border-4 border-cyan-400/30 rounded-full"></div>
+                <div class="absolute inset-0 border-4 border-transparent border-t-cyan-400 rounded-full animate-spin"></div>
+                <div class="absolute inset-2 border-4 border-transparent border-t-blue-400 rounded-full animate-spin-slow"></div>
+            </div>
+            <h2 class="text-3xl font-bold bg-gradient-to-r from-cyan-400 to-blue-400 bg-clip-text text-transparent mb-4 animate-pulse">
+                Loading Portfolio...
+            </h2>
+            <div class="flex gap-2 justify-center">
+                <div class="w-3 h-3 bg-cyan-400 rounded-full animate-bounce" style="animation-delay: 0s;"></div>
+                <div class="w-3 h-3 bg-cyan-400 rounded-full animate-bounce" style="animation-delay: 0.2s;"></div>
+                <div class="w-3 h-3 bg-cyan-400 rounded-full animate-bounce" style="animation-delay: 0.4s;"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Canvas for animated particle background -->
     <canvas id="bgCanvas"></canvas>
 
@@ -480,7 +499,7 @@
                     <ul class="space-y-2 text-sm">
                         <li><a href="index.html" class="text-gray-400 hover:text-cyan-400 transition">Home</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-cyan-400 transition">About</a></li>
-                        <li><a href="projects1.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
+                        <li><a href="projects.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
                     </ul>
                 </div>
                 
