--- a/projects.html
+++ b/projects.html
@@ -277,10 +277,12 @@
                     <div class="additional-carousel-item flex-shrink-0 w-full px-2 md:px-4">
                         <div class="bg-gray-800/50 rounded-lg overflow-hidden border border-blue-400/30 hover:border-blue-400/60 transition-all shadow-lg shadow-blue-500/10">
                             <div class="w-full h-56 bg-gradient-to-br from-blue-900/20 to-blue-600/20 flex items-center justify-center border-b border-blue-400/30">
-                                <div class="text-center">
+                                <!-- <div class="text-center">
                                     <p class="text-blue-300 text-lg font-semibold">Project Placeholder</p>
                                     <p class="text-gray-400 text-sm">Coming Soon</p>
-                                </div>
+                                </div> -->
+                                <img src="assets/images/vision_mouse.png" alt="Project Name" class="w-full h-56 object-cover border-b border-orange-400/30">
+
                             </div>
                             <div class="p-6">
                                 <h3 class="text-xl font-bold text-blue-300 mb-2">Rocket Launcher</h3>
@@ -290,8 +292,8 @@
                                     <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">Skills</span>
                                 </div>
                                 <p class="text-gray-400 text-xs mb-4">Status: <span class="text-blue-300">Placeholder</span></p>
-                                <a href="https://github.com/yourusername/your-next-project" target="_blank" class="inline-block px-4 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold text-sm">Learn More →</a>
-                                <!-- Optional inline details (uncomment to use, then comment the GitHub link above)
+                                <!-- <a href="https://github.com/yourusername/your-next-project" target="_blank" class="inline-block px-4 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold text-sm">Learn More →</a> -->
+                                <!-- Optional inline details (uncomment to use, then comment the GitHub link above) -->
                                 <button onclick="toggleAdditionalDetails('tile1')" class="inline-block px-4 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold text-sm">Learn More →</button>
                                 <div id="tile1-details" class="hidden mt-3 p-4 bg-gray-900/60 rounded-lg border border-blue-400/30 text-sm text-gray-200">
                                     <p class="mb-2">Add deeper project details here (tech stack, challenges, outcomes).</p>
@@ -301,7 +303,6 @@
                                         <li>Next steps</li>
                                     </ul>
                                 </div>
-                                -->
                             </div>
                         </div>
                     </div>
@@ -646,7 +647,7 @@
                                 </div>
                             </div>
                             <div class="p-6">
-                                <h3 class="text-xl font-bold text-orange-300 mb-2">Another Great Project</h3>
+                                <h3 class="text-xl font-bold text-orange-300 mb-2">Gravity Based Water Pump</h3>
                                 <p class="text-gray-300 text-sm mb-4">Share more details about this project. Explain the challenges faced, solutions implemented, and the results achieved.</p>
                                 <div class="flex flex-wrap gap-2 mb-4">
                                     <span class="px-3 py-1 bg-orange-500/20 text-orange-300 rounded-full text-xs font-semibold">Technology</span>
@@ -709,15 +710,15 @@
                     <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="0" aria-label="Tile 1"></button>
                     <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="1" aria-label="Tile 2"></button>
                     <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 3"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 4"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 5"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 6"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 7"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 8"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 9"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 10"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 11"></button>
-                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="2" aria-label="Tile 12"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="3" aria-label="Tile 4"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="4" aria-label="Tile 5"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="5" aria-label="Tile 6"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="6" aria-label="Tile 7"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="7" aria-label="Tile 8"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="8" aria-label="Tile 9"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="9" aria-label="Tile 10"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="10" aria-label="Tile 11"></button>
+                    <button class="additional-dot w-3 h-3 rounded-full bg-cyan-500/40 transition" data-index="11" aria-label="Tile 12"></button>
                 </div>
             </div>
         </div>
