Added description for two projects

--- a/projects.html
+++ b/projects.html
@@ -286,22 +286,24 @@
                             </div>
                             <div class="p-6">
                                 <h3 class="text-xl font-bold text-blue-300 mb-2">Rocket Launcher</h3>
-                                <p class="text-gray-300 text-sm mb-4">Add your project description here. Highlight the key achievements, technologies used, and what you learned from this project.</p>
+                                <p class="text-gray-300 text-sm mb-4">A high-precision mechanical Nerf-dart launcher designed and prototyped in under five hours.</p>
                                 <div class="flex flex-wrap gap-2 mb-4">
-                                    <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">Technology</span>
-                                    <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">Skills</span>
+                                    <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">SolidWorks</span>
+                                    <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">Mechanical Design</span>
+                                    <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">Rapid Prototyping</span>
                                 </div>
-                                <p class="text-gray-400 text-xs mb-4">Status: <span class="text-blue-300">Placeholder</span></p>
+                                <p class="text-gray-400 text-xs mb-4">Status: <span class="text-blue-300">Completed</span></p>
                                 <!-- <a href="https://github.com/yourusername/your-next-project" target="_blank" class="inline-block px-4 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold text-sm">Learn More →</a> -->
                                 <!-- Optional inline details (uncomment to use, then comment the GitHub link above) -->
                                 <button onclick="toggleAdditionalDetails('tile1')" class="inline-block px-4 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold text-sm">Learn More →</button>
                                 <div id="tile1-details" class="hidden mt-3 p-4 bg-gray-900/60 rounded-lg border border-blue-400/30 text-sm text-gray-200">
-                                    <p class="mb-2">Add deeper project details here (tech stack, challenges, outcomes).</p>
-                                    <ul class="list-disc list-inside space-y-1 text-gray-300">
+                                    <p class="mb-2">Developed as a Junior WEC project, this fully mechanical launcher was engineered under strict time and material constraints. The project followed a "CAD-first" workflow to ensure structural 
+                                        integrity and mechanical reliability before physical assembly. By optimizing the mechanical linkages and tension systems in CAD, the resulting prototype achieved a functioning launch distance of 83.7m, hitting targets accurately with zero electronic components.</p>
+                                    <!-- <ul class="list-disc list-inside space-y-1 text-gray-300">
                                         <li>Technical highlights</li>
                                         <li>Results/metrics</li>
                                         <li>Next steps</li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
                         </div>
@@ -311,20 +313,23 @@
                     <div class="additional-carousel-item flex-shrink-0 w-full px-2 md:px-4">
                         <div class="bg-gray-800/50 rounded-lg overflow-hidden border border-green-400/30 hover:border-green-400/60 transition-all shadow-lg shadow-green-500/10">
                             <div class="w-full h-56 bg-gradient-to-br from-green-900/20 to-green-600/20 flex items-center justify-center border-b border-green-400/30">
-                                <div class="text-center">
+                                <!-- <div class="text-center">
                                     <p class="text-green-300 text-lg font-semibold">Project Placeholder</p>
                                     <p class="text-gray-400 text-sm">Coming Soon</p>
-                                </div>
+                                </div> -->
+                                <img src="assets/images/weather_collector.png" alt="Project Name" class="w-full h-56 object-cover border-b border-orange-400/30">
                             </div>
                             <div class="p-6">
                                 <h3 class="text-xl font-bold text-green-300 mb-2">Weather Collector</h3>
-                                <p class="text-gray-300 text-sm mb-4">Describe your upcoming project. Include details about the problem you're solving, your approach, and expected outcomes.</p>
+                                <p class="text-gray-300 text-sm mb-4">A voice-activated IoT weather station that fetches and processes real-time meteorological data through cloud APIs.</p>
                                 <div class="flex flex-wrap gap-2 mb-4">
-                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">Technology</span>
-                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">Skills</span>
+                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">CyberPi</span>
+                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">Python</span>
+                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">OpenWeatherMap API</span>
+                                    <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-xs font-semibold">Voice User Interface (VUI) Design</span>
                                 </div>
                                 <p class="text-gray-400 text-xs mb-4">Status: <span class="text-green-300">In Planning</span></p>
-                                <a href="https://github.com/yourusername/future-project" target="_blank" class="inline-block px-4 py-2 bg-green-500/20 hover:bg-green-500/40 text-green-300 rounded-lg transition font-semibold text-sm">Learn More →</a>
+                                <a href="https://github.com/Sharkyy-eng" target="_blank" class="inline-block px-4 py-2 bg-green-500/20 hover:bg-green-500/40 text-green-300 rounded-lg transition font-semibold text-sm">Learn More →</a>
                                 <!-- Optional inline details (uncomment to use, then comment the GitHub link above)
                                 <button onclick="toggleAdditionalDetails('tile2')" class="inline-block px-4 py-2 bg-green-500/20 hover:bg-green-500/40 text-green-300 rounded-lg transition font-semibold text-sm">Learn More →</button>
                                 <div id="tile2-details" class="hidden mt-3 p-4 bg-gray-900/60 rounded-lg border border-green-400/30 text-sm text-gray-200">
