--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul class="flex gap-6">
                 <li><a href="index.html" class="hover:text-cyan-400 transition">Home</a></li>
                 <li><a href="about.html" class="hover:text-cyan-400 transition">About</a></li>
-                <li><a href="projects.html" class="hover:text-cyan-400 transition">Projects</a></li>
+                <li><a href="projects1.html" class="hover:text-cyan-400 transition">Projects</a></li>
             </ul>
             <button id="themeToggle" class="p-2 rounded-lg bg-gray-800 hover:bg-gray-700 transition text-cyan-400 hover:text-cyan-300" title="Toggle dark/light mode">
                 <svg id="sunIcon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
@@ -439,7 +439,7 @@
 
             <!-- View All Projects Button -->
             <div class="text-center mt-16">
-                <a href="projects.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block">
+                <a href="projects1.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block">
                     View All Projects →
                 </a>
             </div>
@@ -499,7 +499,7 @@
                     <ul class="space-y-2 text-sm">
                         <li><a href="index.html" class="text-gray-400 hover:text-cyan-400 transition">Home</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-cyan-400 transition">About</a></li>
-                        <li><a href="projects.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
+                        <li><a href="projects1.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
                     </ul>
                 </div>
                 
