--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                     <div class="bg-gray-800/50 rounded-lg p-6 border border-cyan-400/30 hover:border-cyan-400/60 transition-all">
                         <div class="flex items-start justify-between mb-3">
                             <div>
-                                <h3 class="text-xl font-bold text-cyan-300">Prototyping Engineer for Advanced SAE UAV</h3>
+                                <h3 class="text-xl font-bold text-cyan-300">Junior Tricopter Lead</h3>
                                 <p class="text-cyan-200 font-semibold">Western Aero Design</p>
                                 <p class="text-gray-400 text-sm">Sep 2025 - Present | 🛩️</p>
                             </div>
@@ -229,7 +229,7 @@
             <p class="text-gray-200 mb-6">
                 Interested in collaborating or learning more about my work? Feel free to reach out!
             </p>
-            <a href="contact.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block">
+            <a href="https://www.linkedin.com/in/sharkyca/" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block" target="_blank" rel="noopener noreferrer">
                 Contact Me
             </a>
         </div>
