--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="projects1.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
                 View My Work
             </a>
-            <a href="https://yourdomain.com/resume" target="_blank" class="px-8 py-3 border-2 border-cyan-500 text-cyan-400 font-semibold rounded-lg hover:bg-cyan-500 hover:text-black hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
+            <a href="https://" target="_blank" class="px-8 py-3 border-2 border-cyan-500 text-cyan-400 font-semibold rounded-lg hover:bg-cyan-500 hover:text-black hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
                 View Resume
             </a>
         </div>
@@ -216,7 +216,7 @@
                             <div class="bg-gray-800/50 rounded-lg p-6 border border-cyan-400/30 hover:border-cyan-400/60 transition-all h-full flex flex-col blur-sm">
                                 <div class="flex items-start justify-between mb-4">
                                     <div class="flex-1">
-                                        <h3 class="text-xl font-bold text-cyan-300 mb-1">Prototyping Engineer for Advanced SAE UAV</h3>
+                                        <h3 class="text-xl font-bold text-cyan-300 mb-1">Junior Tricopter Lead</h3>
                                         <p class="text-cyan-200 font-semibold text-sm mb-1">Western Aero Design</p>
                                         <p class="text-gray-400 text-xs mb-3">Sep 2025 - Present | 🛩️</p>
                                     </div>
@@ -295,7 +295,7 @@
                             <div class="bg-gray-800/50 rounded-lg p-6 border border-cyan-400/30 h-full flex flex-col blur-sm">
                                 <div class="flex items-start justify-between mb-4">
                                     <div class="flex-1">
-                                        <h3 class="text-xl font-bold text-cyan-300 mb-1">Prototyping Engineer for Advanced SAE UAV</h3>
+                                        <h3 class="text-xl font-bold text-cyan-300 mb-1">Junior Tricopter Lead</h3>
                                         <p class="text-cyan-200 font-semibold text-sm mb-1">Western Aero Design</p>
                                         <p class="text-gray-400 text-xs mb-3">Sep 2025 - Present | 🛩️</p>
                                     </div>
@@ -386,8 +386,8 @@
                             <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 rounded-full text-xs font-semibold">Robotics</span>
                         </div>
                         <div class="flex gap-4">
-                            <a href="https://github.com/yourusername/autonomous-robot" target="_blank" class="px-6 py-2 bg-cyan-500/20 hover:bg-cyan-500/40 text-cyan-300 rounded-lg transition font-semibold">View Code</a>
-                            <a href="https://github.com/yourusername/autonomous-robot" target="_blank" class="px-6 py-2 border border-cyan-500/40 hover:border-cyan-500 text-cyan-300 rounded-lg transition font-semibold">Live Demo</a>
+                            <!-- <a href="https://github.com/yourusername/autonomous-robot" target="_blank" class="px-6 py-2 bg-cyan-500/20 hover:bg-cyan-500/40 text-cyan-300 rounded-lg transition font-semibold">View Code</a> -->
+                            <!-- <a href="https://github.com/yourusername/autonomous-robot" target="_blank" class="px-6 py-2 border border-cyan-500/40 hover:border-cyan-500 text-cyan-300 rounded-lg transition font-semibold">Live Demo</a> -->
                         </div>
                     </div>
                     <div class="order-1 md:order-2">
@@ -409,8 +409,8 @@
                             <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-xs font-semibold">OpenCV</span>
                         </div>
                         <div class="flex gap-4">
-                            <a href="https://github.com/yourusername/vision-mouse" target="_blank" class="px-6 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold">View Code</a>
-                            <a href="https://github.com/yourusername/vision-mouse" target="_blank" class="px-6 py-2 border border-blue-500/40 hover:border-blue-500 text-blue-300 rounded-lg transition font-semibold">Live Demo</a>
+                            <a href="https://github.com/Sharkyy-eng/vision-mouse-advanced" target="_blank" class="px-6 py-2 bg-blue-500/20 hover:bg-blue-500/40 text-blue-300 rounded-lg transition font-semibold">View Code</a>
+                            <!-- <a href="https://github.com/yourusername/vision-mouse" target="_blank" class="px-6 py-2 border border-blue-500/40 hover:border-blue-500 text-blue-300 rounded-lg transition font-semibold">Live Demo</a> -->
                         </div>
                     </div>
                 </div>
@@ -426,8 +426,8 @@
                             <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-xs font-semibold">Sensors</span>
                         </div>
                         <div class="flex gap-4">
-                            <a href="https://github.com/yourusername/weather-collector" target="_blank" class="px-6 py-2 bg-purple-500/20 hover:bg-purple-500/40 text-purple-300 rounded-lg transition font-semibold">View Code</a>
-                            <a href="https://github.com/yourusername/weather-collector" target="_blank" class="px-6 py-2 border border-purple-500/40 hover:border-purple-500 text-purple-300 rounded-lg transition font-semibold">Live Demo</a>
+                            <a href="https://github.com/Sharkyy-eng/weather-collector" target="_blank" class="px-6 py-2 bg-purple-500/20 hover:bg-purple-500/40 text-purple-300 rounded-lg transition font-semibold">View Code</a>
+                            <!-- <a href="https://github.com/yourusername/weather-collector" target="_blank" class="px-6 py-2 border border-purple-500/40 hover:border-purple-500 text-purple-300 rounded-lg transition font-semibold">Live Demo</a> -->
                         </div>
                     </div>
                     <div class="order-1 md:order-2">
@@ -517,7 +517,7 @@
                 <div>
                     <h4 class="text-lg font-semibold text-cyan-300 mb-4">Follow Me</h4>
                     <div class="flex gap-4">
-                        <a href="https://github.com/DiamondDolby" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-800 hover:bg-cyan-500/20 rounded-lg flex items-center justify-center text-cyan-400 hover:text-cyan-300 transition" title="GitHub">
+                        <a href="https://github.com/Sharkyy-eng" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-800 hover:bg-cyan-500/20 rounded-lg flex items-center justify-center text-cyan-400 hover:text-cyan-300 transition" title="GitHub">
                             <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v 3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                         </a>
                         <a href="https://www.linkedin.com/in/sharkyca" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-800 hover:bg-cyan-500/20 rounded-lg flex items-center justify-center text-cyan-400 hover:text-cyan-300 transition" title="LinkedIn">
@@ -656,7 +656,7 @@
         // Experience data with expanded content from about.html
         const experienceData = [
             {
-                title: "Prototyping Engineer for Advanced SAE UAV",
+                title: "Junior Tricopter Lead",
                 company: "Western Aero Design",
                 date: "Sep 2025 - Present | 🛩️",
                 shortDesc: "Leading development of a competitive Tricopter UAV prototype for the International SAE Challenge, focusing on rapid prototyping and system reliability.",
