added resume link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul class="flex gap-6">
                 <li><a href="index.html" class="hover:text-cyan-400 transition">Home</a></li>
                 <li><a href="about.html" class="hover:text-cyan-400 transition">About</a></li>
-                <li><a href="projects1.html" class="hover:text-cyan-400 transition">Projects</a></li>
+                <li><a href="projects.html" class="hover:text-cyan-400 transition">Projects</a></li>
             </ul>
             <button id="themeToggle" class="p-2 rounded-lg bg-gray-800 hover:bg-gray-700 transition text-cyan-400 hover:text-cyan-300" title="Toggle dark/light mode">
                 <svg id="sunIcon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
@@ -80,10 +80,10 @@
             Mechatronics & Artificial Intelligence Systems Engineer — Engineering thoughts into reality
         </p>
         <div class="mt-8 flex gap-4 animate-fade-in-delay-2" id="heroButtons">
-            <a href="projects1.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
+            <a href="projects.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
                 View My Work
             </a>
-            <a href="https://" target="_blank" class="px-8 py-3 border-2 border-cyan-500 text-cyan-400 font-semibold rounded-lg hover:bg-cyan-500 hover:text-black hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
+            <a href="https://jupee.mebot.in/assets/Resumes/General_V5.pdf" target="_blank" class="px-8 py-3 border-2 border-cyan-500 text-cyan-400 font-semibold rounded-lg hover:bg-cyan-500 hover:text-black hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 hover:shadow-2xl">
                 View Resume
             </a>
         </div>
@@ -113,7 +113,7 @@
                     <h3 id="popupTitle" class="text-2xl font-bold text-cyan-300 mb-2"></h3>
                     <p id="popupDesc" class="text-gray-300 mb-4"></p>
                 </div>
-                <button onclick="window.location.href='projects1.html'" class="px-4 py-2 bg-cyan-400 text-gray-900 rounded hover:bg-cyan-300 transition font-semibold">
+                <button onclick="window.location.href='projects.html'" class="px-4 py-2 bg-cyan-400 text-gray-900 rounded hover:bg-cyan-300 transition font-semibold">
                     More Details
                 </button>
             </div>
@@ -439,7 +439,7 @@
 
             <!-- View All Projects Button -->
             <div class="text-center mt-16">
-                <a href="projects1.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block">
+                <a href="projects.html" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-500 text-black font-semibold rounded-lg shadow-lg hover:shadow-cyan-500/50 hover:scale-105 transition-all duration-300 inline-block">
                     View All Projects →
                 </a>
             </div>
@@ -499,7 +499,7 @@
                     <ul class="space-y-2 text-sm">
                         <li><a href="index.html" class="text-gray-400 hover:text-cyan-400 transition">Home</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-cyan-400 transition">About</a></li>
-                        <li><a href="projects1.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
+                        <li><a href="projects.html" class="text-gray-400 hover:text-cyan-400 transition">Projects</a></li>
                     </ul>
                 </div>
                 
