Change the loading screen time

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         </div>
                     </div>
                     <div class="order-1 md:order-2">
-                        <img src="assets/images/me.jpg" alt="Autonomous Robot" class="rounded-lg w-full h-80 object-cover border border-cyan-400/30 hover:border-cyan-400/60 transition-all">
+                        <img src="assets/images/auto-bot.png" alt="Autonomous Robot" class="rounded-lg w-full h-80 object-cover border border-cyan-400/30 hover:border-cyan-400/60 transition-all">
                     </div>
                 </div>
 
